# lvgl-algo

./: CMakeLists.txt  bar_graph.c  bar_graph.h  bubble_sort.c  home_screen.c  home_screen.h  lv_conf.h  main.c  run  sorting.h
